--- a/_posts/2023-02-01-seminars.md
+++ b/_posts/2023-02-01-seminars.md
@@ -33,7 +33,7 @@ Mars and Titan have both vastly distinct environments from the Earth's, yet they
 Meeting ID: 876 7331 0489<br />
 Passcode: 856642<br />
 
-<b>In-person Directions</b><br>
+<b>In-person directions</b><br>
 The IPGP Planetary and Space Sciences seminar series is held in the building Lamarck B that is part of the Université Paris Cité - Campus des Grands Moulins near the BnF (Bibliothèque Nationale de France). We are not at the main IPGP campus near the Jardin des Plantes and the Jussieu metro station. You do not need a badge to enter this building. You only need to go to 35 rue Hélène Brion, and once in the lobby of the main entrance, take the elevators on the right to the 5th floor. Exit the elevator and take the corridor to the right. The seminar room is number 522.
 
 ---
@@ -66,7 +66,7 @@ We study the behavior of a multi-component silicate fluid with bulk silicate Ear
 Meeting ID: 876 7331 0489<br />
 Passcode: 856642<br />
 
-<b>In-person Directions</b><br />
+<b>In-person directions</b><br />
 The IPGP Planetary and Space Sciences seminar series is held in the building Lamarck B that is part of the Université Paris Cité - Campus des Grands Moulins near the BnF (Bibliothèque Nationale de France). We are not at the main IPGP campus near the Jardin des Plantes and the Jussieu metro station. You do not need a badge to enter this building. You only need to go to 35 rue Hélène Brion, and once in the lobby of the main entrance, take the elevators on the right to the 5th floor. Exit the elevator and take the corridor to the right. The seminar room is number 522.
 
 ---
@@ -84,7 +84,7 @@ Tectonics, climate, and landscapes are symptoms of underlying intrinsic properti
 Meeting ID: 876 7331 0489<br />
 Passcode: 856642<br />
 
-<b>In-person Directions</b><br>
+<b>In-person directions</b><br>
 The IPGP Planetary and Space Sciences seminar series is held in the building Lamarck B that is part of the Université Paris Cité - Campus des Grands Moulins near the BnF (Bibliothèque Nationale de France). We are not at the main IPGP campus near the Jardin des Plantes and the Jussieu metro station. You do not need a badge to enter this building. You only need to go to 35 rue Hélène Brion, and once in the lobby of the main entrance, take the elevators on the right to the 5th floor. Exit the elevator and take the corridor to the right. The seminar room is number 522.
 
 ---
