--- a/_posts/2023-03-31-seminars.md
+++ b/_posts/2023-03-31-seminars.md
@@ -47,7 +47,7 @@ The IPGP Planetary and Space Sciences seminar series is held in the building Lam
 
 ### 11 April 2023, 15:00
 **Insights into the Origin of Volatile Elements in Terrestrial Planets through Zinc and Copper Isotopic Analyses of Ryugu Samples**<br />
-Fredéric Moynier (Institut de Physique du Globe de Paris)<br />
+Frédéric Moynier (Institut de Physique du Globe de Paris)<br />
 IPGP Planetary and Space Sciences, Bâtiment Lamarck B, 35 rue Hélène Brion, Paris
 
 <b>Summary</b><br />
@@ -63,7 +63,7 @@ The IPGP Planetary and Space Sciences seminar series is held in the building Lam
 
 ---
 
-## 23 May 2023, 15:00
+### 23 May 2023, 15:00
 **Ring moon morphology and libration measurements**<br />
 Nicolas Rambaux (Observatoire de Paris, IMCEE)<br />
 IPGP Planetary and Space Sciences, Bâtiment Lamarck B, 35 rue Hélène Brion, Paris
