--- a/_posts/2023-05-31-seminars.md
+++ b/_posts/2023-05-31-seminars.md
@@ -48,7 +48,7 @@ The IPGP Planetary and Space Sciences seminar series is held in the building Lam
 
 ### 13 June 2023, 15:00
 **Ring moon morphology and libration measurements**<br />
-Nicolas Rambaux (Observatoire de Paris, IMCEE)<br />
+Nicolas Rambaux (Sorbonne Université, IMCCE-Observatoire de Paris)<br />
 IPGP Planetary and Space Sciences, Bâtiment Lamarck B, 35 rue Hélène Brion, Paris
 
 <b>Summary</b><br />
